Update gc.log.md